# msys-input-touch

./: .gitignore  .msys-packageignore  Makefile  README.md  manifest.json  pyproject.toml
docs/: input-method-v1.md
files/app/: lvgl_main.py  main.py
files/app/msys_input_touch/: __init__.py  control.py  focus.py  geometry.py  i18n.py  lifecycle.py  mode_state.py  model.py  native_bridge.py  pinyin.py  service.py  ui.py  worker.py  x11_input.py
files/share/i18n/: catalog.json
files/share/pinyin/: SOURCE.md  basic.json
native/: main.c
scripts/: build_aarch64_j1.sh  generate_pinyin_dictionary.py  pinyin_seed.json
tests/: __init__.py  test_control.py  test_focus.py  test_geometry.py  test_i18n.py  test_lifecycle.py  test_manifest.py  test_mode_state.py  test_model.py  test_native_bridge_events.py  test_pinyin.py  test_service.py  test_tk_fonts.py  test_ui_contract.py  test_worker.py  test_x11_input.py  xvfb_lvgl_smoke.sh
ui/: keyboard.xml
